--- a/styles/styleBasket.css
+++ b/styles/styleBasket.css
@@ -363,3 +363,26 @@ footer {
 .btn_main-btn.selected {
     background-color: #10a336;
 }
+
+.checkout-panel.active {
+  width: 400px;
+  padding: 20px;
+  background: #fff;
+  position: fixed;
+  top: 100px;
+  right: 0;
+  box-shadow: -3px 0 10px rgba(0,0,0,0.2);
+  z-index: 999;
+  transition: 0.3s ease;
+}
+
+.confirm-btn {
+  background-color: #4CAF50;
+  color: white;
+  border: none;
+  padding: 12px;
+  width: 100%;
+  cursor: pointer;
+  font-size: 16px;
+  border-radius: 8px;
+}
